ks_items/ks_post_iptables
## configuration of iptables
if [[ -e /etc/sysconfig/iptables ]] ; then
    mv /etc/sysconfig/iptables /etc/sysconfig/iptables_ini_cfg
    mv /etc/sysconfig/ip6tables /etc/sysconfig/ip6tables_ini_cfg
fi

cat << EOF >> /etc/sysconfig/iptables
*filter
:INPUT DROP [0:0]
:FORWARD DROP [0:0]
:OUTPUT ACCEPT [0:0]

-A INPUT -i lo -j ACCEPT

# DEFAULT ACCEPTS
-A INPUT -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT

# REMOVE INVALID FLAGS COMBINATIONS
-A INPUT -m conntrack --ctstate INVALID -j DROP

## WHITELISTING - first accept all what was specified to be accepted

# DEFAULT ACCEPT ALL LOCAL SSH - MANAGEMENT
-A INPUT -m tcp -p tcp -m multiport --dports 22,60000 -j ACCEPT --source 85.120.46.0/24,46.243.114.128/25,172.20.0.0/24,10.10.8.0/22,192.168.10.0/24

# ACCEPT ALL ICMP
-A INPUT -p icmp -j ACCEPT

# DROP EVERYTHING ELSE
-A INPUT -j DROP
-A FORWARD -j DROP
COMMIT
EOF

cat << EOF >> /etc/sysconfig/ip6tables
*filter
:INPUT DROP [0:0]
:FORWARD DROP [0:0]
:OUTPUT ACCEPT [0:0]

-A INPUT -i lo -j ACCEPT

# DEFAULT ACCEPTS
-A INPUT -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT

# REMOVE INVALID FLAGS COMBINATIONS
-A INPUT -m conntrack --ctstate INVALID -j DROP

## WHITELISTING - first accept all what was specified to be accepted

# DEFAULT ACCEPT ALL LOCAL SSH - MANAGEMENT
-A INPUT -m tcp -p tcp -m multiport --dports 22,60000 -j ACCEPT --source 2001:b30:4210::/48

# ACCEPT ALL ICMP
-A INPUT -p ipv6-icmp -j ACCEPT

# DROP EVERYTHING ELSE
-A INPUT -j DROP
-A FORWARD -j DROP
COMMIT
EOF

systemctl disable firewalld
yum -y remove firewalld*
systemctl enable --now iptables ip6tables

#######################################
##  ADD sysctl mtu settings

cat << EOF >> /etc/sysctl.d/70-mtu.conf
# this would enable automatic MTU discovery (if local MTU >=9000)
net.ipv4.ip_forward_use_pmtu=0
net.ipv4.ip_no_pmtu_disc=0

net.ipv4.tcp_mtu_probing=2
net.ipv4.tcp_base_mss = 1240
net.ipv4.route.min_pmtu = 1024

net.ipv4.route.min_adv_mss = 1024
net.ipv6.route.min_adv_mss = 1024

net.ipv4.route.mtu_expires = 1800
net.ipv6.route.mtu_expires = 1800

EOF
